refactor backend codes